k8s/gw/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-gw-svc
  labels:
    app: user-gw
spec:
  ports:
  - name: "grpc"
    nodePort: 30181
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: user-gw
  type: NodePort
